--- a/assets/css/light-bootstrap-dashboard.css
+++ b/assets/css/light-bootstrap-dashboard.css
@@ -3099,10 +3099,10 @@ be a descendant of the grid when it is being dragged.
 }
 
 .ct-series-a .ct-point, .ct-series-a .ct-line, .ct-series-a .ct-bar, .ct-series-a .ct-slice-donut {
-  stroke: #23CCEF;
+  stroke: #1879fd;
 }
 .ct-series-a .ct-slice-pie, .ct-series-a .ct-area {
-  fill: #23CCEF;
+  fill: #1879fd;
 }
 
 .ct-series-b .ct-point, .ct-series-b .ct-line, .ct-series-b .ct-bar, .ct-series-b .ct-slice-donut {
@@ -3608,7 +3608,7 @@ be a descendant of the grid when it is being dragged.
 }
 
 .ct-azure {
-  stroke: #23CCEF !important;
+  stroke: #1879fd !important;
 }
 
 .ct-green {
@@ -4233,7 +4233,7 @@ h1 .subtitle {
 }
 
 .text-info, .text-info:hover {
-  color: #23CCEF !important;
+  color: #1879fd !important;
 }
 
 .text-success, .text-success:hover {
@@ -4464,13 +4464,13 @@ h1 .subtitle {
 }
 .sidebar[data-color="azure"]:after,
 .bootstrap-navbar[data-color="azure"]:after {
-  background: #23CCEF;
-  background: -moz-linear-gradient(top, #23CCEF 0%, rgba(64, 145, 255, 0.7) 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #23CCEF), color-stop(100%, rgba(64, 145, 255, 0.7)));
-  background: -webkit-linear-gradient(top, #23CCEF 0%, rgba(64, 145, 255, 0.7) 100%);
-  background: -o-linear-gradient(top, #23CCEF 0%, rgba(64, 145, 255, 0.7) 100%);
-  background: -ms-linear-gradient(top, #23CCEF 0%, rgba(64, 145, 255, 0.7) 100%);
-  background: linear-gradient(to bottom, #23CCEF 0%, rgba(64, 145, 255, 0.7) 100%);
+  background: #1879fd;
+  background: -moz-linear-gradient(top, #1879fd 0%, rgba(64, 145, 255, 0.7) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1879fd), color-stop(100%, rgba(64, 145, 255, 0.7)));
+  background: -webkit-linear-gradient(top, #1879fd 0%, rgba(64, 145, 255, 0.7) 100%);
+  background: -o-linear-gradient(top, #1879fd 0%, rgba(64, 145, 255, 0.7) 100%);
+  background: -ms-linear-gradient(top, #1879fd 0%, rgba(64, 145, 255, 0.7) 100%);
+  background: linear-gradient(to bottom, #1879fd 0%, rgba(64, 145, 255, 0.7) 100%);
   background-size: 150% 150%;
 }
 .sidebar[data-color="green"]:after,
@@ -4882,8 +4882,8 @@ h1 .subtitle {
 }
 
 .btn-info {
-  border-color: #23CCEF;
-  color: #23CCEF;
+  border-color: #1879fd;
+  color: #1879fd;
 }
 .btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active, .btn-info:active:focus, .btn-info:active:hover, .btn-info.active:focus, .btn-info.active:hover, .open > .btn-info.dropdown-toggle {
   background-color: transparent;
@@ -4892,11 +4892,11 @@ h1 .subtitle {
 }
 .btn-info.disabled, .btn-info.disabled:hover, .btn-info.disabled:focus, .btn-info.disabled.focus, .btn-info.disabled:active, .btn-info.disabled.active, .btn-info:disabled, .btn-info:disabled:hover, .btn-info:disabled:focus, .btn-info:disabled.focus, .btn-info:disabled:active, .btn-info:disabled.active, .btn-info[disabled], .btn-info[disabled]:hover, .btn-info[disabled]:focus, .btn-info[disabled].focus, .btn-info[disabled]:active, .btn-info[disabled].active, fieldset[disabled] .btn-info, fieldset[disabled] .btn-info:hover, fieldset[disabled] .btn-info:focus, fieldset[disabled] .btn-info.focus, fieldset[disabled] .btn-info:active, fieldset[disabled] .btn-info.active {
   background-color: transparent;
-  border-color: #23CCEF;
+  border-color: #1879fd;
 }
 .btn-info.btn-fill {
   color: #FFFFFF;
-  background-color: #23CCEF;
+  background-color: #1879fd;
   opacity: 1;
   filter: alpha(opacity=100);
 }
@@ -4908,7 +4908,7 @@ h1 .subtitle {
   border-top-color: #FFFFFF;
 }
 .btn-info .caret {
-  border-top-color: #23CCEF;
+  border-top-color: #1879fd;
 }
 
 .btn-warning {
@@ -5102,7 +5102,7 @@ body,
 }
 
 a {
-  color: #23CCEF;
+  color: #1879fd;
 }
 a:hover, a:focus {
   color: #11bfe3;
@@ -5393,7 +5393,7 @@ fieldset[disabled] .form-control {
 }
 
 .progress-bar-info {
-  background-color: #23CCEF;
+  background-color: #1879fd;
 }
 
 .progress-bar-success {
@@ -5532,7 +5532,7 @@ fieldset[disabled] .form-control {
 }
 
 .slider-info .ui-widget-header {
-  background-color: #23CCEF;
+  background-color: #1879fd;
 }
 
 .slider-success .ui-widget-header {
@@ -6027,8 +6027,8 @@ star {
   color: #447DF7;
 }
 .tagsinput.tag-azure .tag, .tagsinput.tag-azure .tagsinput-remove-link {
-  border-color: #23CCEF;
-  color: #23CCEF;
+  border-color: #1879fd;
+  color: #1879fd;
 }
 .tagsinput.tag-green .tag, .tagsinput.tag-green .tagsinput-remove-link {
   border-color: #87CB16;
@@ -6048,9 +6048,9 @@ star {
   background-color: #447DF7;
 }
 .tagsinput.tag-fill.tag-azure .tag {
-  border-color: #23CCEF;
+  border-color: #1879fd;
   color: #FFFFFF;
-  background-color: #23CCEF;
+  background-color: #1879fd;
 }
 .tagsinput.tag-fill.tag-green .tag {
   border-color: #87CB16;
@@ -6318,7 +6318,7 @@ star {
 
 .checkbox.checked .icons,
 .radio.checked .icons {
-  color: #23CCEF;
+  color: #1879fd;
 }
 
 .checkbox.checked .first-icon,
@@ -6331,7 +6331,7 @@ star {
 .radio.checked .second-icon {
   opacity: 1;
   filter: alpha(opacity=100);
-  color: #23CCEF;
+  color: #1879fd;
   -webkit-transition: color 0.2s linear;
   transition: color 0.2s linear;
 }
@@ -6480,7 +6480,7 @@ star {
 }
 
 .has-switch span.switch-left {
-  background-color: #23CCEF;
+  background-color: #1879fd;
   border-left: 1px solid transparent;
   border-radius: 30px 0 0 30px;
   color: #FFFFFF;
@@ -6492,7 +6492,7 @@ star {
 
 .has-switch span.switch-right {
   border-radius: 0 30px 30px 0;
-  background-color: #23CCEF;
+  background-color: #1879fd;
   color: #ffffff;
   text-indent: -3px;
 }
@@ -6722,27 +6722,27 @@ star {
 .navbar-default .navbar-nav > li > a:not(.btn):focus {
   background-color: transparent;
   border-radius: 3px;
-  color: #23CCEF;
+  color: #1879fd;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 .navbar-default .navbar-nav > .dropdown > a:hover .caret,
 .navbar-default .navbar-nav > .dropdown > a:focus .caret {
-  border-bottom-color: #23CCEF;
-  border-top-color: #23CCEF;
+  border-bottom-color: #1879fd;
+  border-top-color: #1879fd;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
   background-color: transparent;
-  color: #23CCEF;
+  color: #1879fd;
 }
 .navbar-default .navbar-nav .navbar-toggle:hover, .navbar-default .navbar-nav .navbar-toggle:focus {
   background-color: transparent;
 }
 .navbar-default:not(.navbar-transparent) .btn-default:hover {
-  color: #23CCEF;
-  border-color: #23CCEF;
+  color: #1879fd;
+  border-color: #1879fd;
 }
 .navbar-default:not(.navbar-transparent) .btn-neutral, .navbar-default:not(.navbar-transparent) .btn-neutral:hover, .navbar-default:not(.navbar-transparent) .btn-neutral:active {
   color: #9A9A9A;
@@ -8094,14 +8094,14 @@ star {
   content: '';
   display: inline-block;
   border: 0 0 7px 7px solid transparent;
-  border-bottom-color: #23CCEF;
+  border-bottom-color: #1879fd;
   border-top-color: rgba(0, 0, 0, 0.2);
   position: absolute;
   bottom: 4px;
   right: 4px;
 }
 .bootstrap-datetimepicker-widget table td.active > div, .bootstrap-datetimepicker-widget table td.active:hover > div {
-  background-color: #23CCEF;
+  background-color: #1879fd;
   color: #FFFFFF;
 }
 .bootstrap-datetimepicker-widget table td.active.today:before > div {
@@ -8126,7 +8126,7 @@ star {
   background: #E3E3E3;
 }
 .bootstrap-datetimepicker-widget table td span.active {
-  background-color: #23CCEF;
+  background-color: #1879fd;
   color: #FFFFFF;
 }
 .bootstrap-datetimepicker-widget table td span.old {
@@ -8234,12 +8234,12 @@ star {
   background-size: 150% 150%;
 }
 .full-page[data-color="azure"]:after {
-  background: #23CCEF;
-  background: -moz-linear-gradient(top, #23CCEF 0%, rgba(64, 145, 255, 0.6) 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #23CCEF), color-stop(100%, rgba(64, 145, 255, 0.6)));
-  background: -webkit-linear-gradient(top, #23CCEF 0%, rgba(64, 145, 255, 0.6) 100%);
-  background: -o-linear-gradient(top, #23CCEF 0%, rgba(64, 145, 255, 0.6) 100%);
-  background: -ms-linear-gradient(top, #23CCEF 0%, rgba(64, 145, 255, 0.6) 100%);
+  background: #1879fd;
+  background: -moz-linear-gradient(top, #1879fd 0%, rgba(64, 145, 255, 0.6) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1879fd), color-stop(100%, rgba(64, 145, 255, 0.6)));
+  background: -webkit-linear-gradient(top, #1879fd 0%, rgba(64, 145, 255, 0.6) 100%);
+  background: -o-linear-gradient(top, #1879fd 0%, rgba(64, 145, 255, 0.6) 100%);
+  background: -ms-linear-gradient(top, #1879fd 0%, rgba(64, 145, 255, 0.6) 100%);
   background: linear-gradient(to bottom, #1879fd 0%, rgba(64, 145, 255, 0.6) 100%);
   background-size: 150% 150%;
 }
@@ -9241,9 +9241,9 @@ star {
   margin-left: 0;
 }
 .nav-pills > li > a {
-  border: 1px solid #23CCEF;
+  border: 1px solid #1879fd;
   border-radius: 0;
-  color: #23CCEF;
+  color: #1879fd;
   margin-left: -1px;
 }
 .nav-pills > li > a:hover, .nav-pills > li > a:focus {
@@ -9252,7 +9252,7 @@ star {
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
-  background-color: #23CCEF;
+  background-color: #1879fd;
   color: #FFFFFF;
 }
 .nav-pills > li:first-child > a {
@@ -9289,7 +9289,7 @@ star {
 .pagination > li.active > span:hover,
 .pagination > li.active > a:focus,
 .pagination > li.active > span:focus {
-  background-color: #23CCEF;
+  background-color: #1879fd;
   border: 0;
   color: #FFFFFF;
   padding: 7px 13px;
@@ -9313,7 +9313,7 @@ star {
 .nav-pills-azure > li.active > a,
 .nav-pills-azure > li.active > a:hover,
 .nav-pills-azure > li.active > a:focus {
-  background-color: #23CCEF;
+  background-color: #1879fd;
 }
 
 .pagination-azure > li.active a,
@@ -9322,7 +9322,7 @@ star {
 .pagination-azure > li.active span,
 .pagination-azure > li.active span:hover,
 .pagination-azure > li.active span:focus {
-  background-color: #23CCEF;
+  background-color: #1879fd;
 }
 
 .nav-pills-green > li.active > a,
@@ -9376,8 +9376,8 @@ star {
 }
 
 .nav-pills-azure > li > a {
-  border: 1px solid #23CCEF;
-  color: #23CCEF;
+  border: 1px solid #1879fd;
+  color: #1879fd;
 }
 
 .nav-pills-green > li > a {
@@ -9421,7 +9421,7 @@ star {
 }
 .nav-text > li.active a,
 .nav-icons > li.active a {
-  color: #23CCEF;
+  color: #1879fd;
 }
 
 .nav-icons > li {
@@ -9449,7 +9449,7 @@ star {
 }
 
 .nav-azure > li.active a {
-  color: #23CCEF;
+  color: #1879fd;
 }
 
 .nav-green > li.active a {
@@ -9509,12 +9509,12 @@ star {
 
 
 .sidebar[data-color="azure"]:after, .bootstrap-navbar[data-color="azure"]:after {
-  background: #23CCEF;
-  background: -moz-linear-gradient(top, #23CCEF 0%, rgba(64, 145, 255, 0.7) 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #23CCEF), color-stop(100%, rgba(64, 145, 255, 0.7)));
-  background: -webkit-linear-gradient(top, #23CCEF 0%, rgba(64, 145, 255, 0.7) 100%);
-  background: -o-linear-gradient(top, #23CCEF 0%, rgba(64, 145, 255, 0.7) 100%);
-  background: -ms-linear-gradient(top, #23CCEF 0%, rgba(64, 145, 255, 0.7) 100%);
+  background: #1879fd;
+  background: -moz-linear-gradient(top, #1879fd 0%, rgba(64, 145, 255, 0.7) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1879fd), color-stop(100%, rgba(64, 145, 255, 0.7)));
+  background: -webkit-linear-gradient(top, #1879fd 0%, rgba(64, 145, 255, 0.7) 100%);
+  background: -o-linear-gradient(top, #1879fd 0%, rgba(64, 145, 255, 0.7) 100%);
+  background: -ms-linear-gradient(top, #1879fd 0%, rgba(64, 145, 255, 0.7) 100%);
   background: linear-gradient(to bottom, #1879fd 0%, rgba(0, 7, 15, 0.7) 100%);
   background-size: 150% 150%;
 }
